spacing of buttons of mobile correction

--- a/style.css
+++ b/style.css
@@ -1258,6 +1258,10 @@ h1 {
     position: static;
     width: 100%;
   }
+  .left-hero-buttons,
+  .right-hero-buttons {
+    row-gap: 0;
+  }
   .left-hero-media {
     max-width: 100%;
     max-height: 100%;
